--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "secure-build": "npm audit fix && react-scripts build"
   },
   "eslintConfig": {
     "extends": [
